--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -23,7 +23,7 @@ else
     <QuickGrid Items="MoviesList.AsQueryable()" ResizableColumns>
         <PropertyColumn Property="f => f.Id" Title="Id" Sortable="true"/>
         <PropertyColumn Property="m => m.Movie_Name" Title="Movie Name" Sortable="true"/>
-        <PropertyColumn Property="m => m.Director" Title="Director"/>
+        <PropertyColumn Property="m => m.Director" Title="Director" Sortable="true"/>
         <PropertyColumn Property="m => m.Year" Title="Year" Sortable="true"/>
 
     </QuickGrid>
@@ -32,7 +32,9 @@ else
 
 @code {
     
-    private List<Movies>? MoviesList { get; set; } = new List<Movies>();
+    
+    private List<Movies> MoviesList { get; set; } = new List<Movies> ();
+    
     protected override async Task OnInitializedAsync()
     {
         MoviesList = await Http.GetFromJsonAsync<List<Movies>>("api/Movie");
